[Wiki] Codeblocks should no longer be way too wide on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -248,6 +248,16 @@ textarea.fira-code {
     border: 1px solid rgba(0, 0, 0, 0.11);
 }
 
+#doc-view div {
+    width: calc(100% - 6rem);
+}
+
+@media (max-width: 639px) {
+    #doc-view div {
+        width: calc(100% - 1rem);
+    }
+}
+
 .code {
     overflow-x: auto;
 }
